# my_ros2_practice_1

./: .gitignore  README.md
bags/number_test/: metadata.yaml  number_test_0.db3
bags/rosbag2_2024_10_18-20_04_05/: metadata.yaml  rosbag2_2024_10_18-20_04_05_0.db3
my_cpp_practice/: CMakeLists.txt  package.xml
my_cpp_practice/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery_client.cpp  hw_status_publisher.cpp  led_state_server.cpp  number_counter.cpp  number_publisher.cpp  reset_counter_client.cpp  robot_news_station.cpp  smart_phone.cpp
my_py_practice/: package.xml  setup.cfg  setup.py
my_py_practice/my_py_practice/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  number_publisher.py  robot_news_station.py  smart_phone.py
my_robot_bringup/: package.xml
my_robot_bringup/launch/: number_app.launch.py  robot_station.launch.py  turtle_bot_sim.launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: LedState.msg
my_robot_interfaces/srv/: SetLed.srv  TurtlePose.srv
my_turtlesim_practice/: CMakeLists.txt  package.xml
my_turtlesim_practice/src/: turtle_add_goal_pose.cpp  turtle_move_to_goal.cpp  turtle_move_to_goal_copy.cpp
